# fKALE

./: .gitignore  Cargo.toml  README.md  env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
contracts/fkale-token/: Cargo.toml
contracts/fkale-token/src/: lib.rs
contracts/forwards/: Cargo.toml
contracts/forwards/src/: lib.rs
scripts/: deploy-fkale.ts  deploy-forwards.ts  setup-complete.ts
src/: App.tsx  index.css
src/components/: ErrorBoundary.tsx  HeroSection.tsx  StatsCard.tsx  ThemeToggle.tsx
src/lib/: contracts.ts  soroban.ts
src/pages/: BuyFKale.tsx  Home.tsx  ManagePosition.tsx  RedeemKale.tsx
src/providers/: ThemeProvider.tsx
src/styles/: theme.css
